동적 검색 완료 22-09-19 18:01

--- a/WorkspaceSF/sideProject/force-app/main/default/lwc/sideProject/sideProject.html
+++ b/WorkspaceSF/sideProject/force-app/main/default/lwc/sideProject/sideProject.html
@@ -1,6 +1,24 @@
 <template>
     <lightning-card title="비디오 목록">
-        <lightning-button label="NEW" onclick={showModalBox}></lightning-button>        
+         <!-- <div class="slds-m-top_medium slds-m-bottom_x-large"> -->
+            <div class="slds-p-around_medium lgc-bg">
+                <h2> ⇊검색 필터</h2>
+                <lightning-button-menu alternative-text="Action" onselect={handleSearchTitle}>
+                    <template for:each={search} for:item="action">
+                        <lightning-menu-item
+                            id="action-id"
+                            label={action.label}
+                            value={action.value}
+                            key={action.label}
+                        >
+                        </lightning-menu-item>
+                    </template>
+                </lightning-button-menu>
+                <lightning-input type="search" label="Search" onchange={handleSearch} placeholder="Search here..." is-loading></lightning-input>
+            </div>
+        <!-- </div> -->
+        
+        <lightning-button label="NEW" onclick={showModalBox}></lightning-button>
         <lightning-button label="DELETE" onclick={handleDelete}></lightning-button>
         <div class="slds-p-bottom_large slds-p-left_large" style="height: 300px">
             <template if:true={data}><!--  -->
